--- a/sass/estilosPersonal.css
+++ b/sass/estilosPersonal.css
@@ -240,15 +240,21 @@ h3, h5, h6 {
 }
 
 .subtitulo_articulo {
-	text-align: right;
-	padding-right: 30px;
+	text-align: left;
+	padding-left: 30px;
+	font-size: 17px;
 }
 
 .articulos {
 	padding: 20px 80px;
+	margin-bottom: 80px;
 }
 
 @media screen and (max-width: 992px){
+
+	.social {
+		visibility: hidden;
+	}
 
 	.contenedor-card-padre {
 		flex-direction:row;
@@ -271,4 +277,6 @@ h3, h5, h6 {
 	.contenedor-card-padre .contenedor-card {
 		flex-grow:1;
 	}
+
+
 }
